<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#673AB7"
    android:background="#2196F3"
    tools:context=".SOS"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/welcome"
        android:layout_width="231dp"
        android:layout_height="147dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#F5FBFBFB"
        android:text="@string/welcomeMessage"
        android:textAlignment="center"
        android:textColor="#F4F3F4"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/play"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#4CAF50"
        android:onClick="play"
        android:text="@string/play"
        android:textAlignment="center"
        android:textColor="#512DA8"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
         />

    <Button
        android:id="@+id/exit"
        android:layout_width="156dp"
        android:layout_height="48dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="253dp"
        android:backgroundTint="#E91E63"
        android:onClick="exit"
        android:text="@string/exit"
        android:textAlignment="center"
        android:textColor="#F7FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play" />

</androidx.constraintlayout.widget.ConstraintLayout>